--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -7,6 +7,7 @@
     <title>@title</title>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+    <script type="text/javascript" src="@routes.Assets.versioned("javascript/gl-matrix-min.js")"></script>
   </head>
   <body>
     @content
